feat(confluence): Add auto detection of preambleTitle doctoolchain parameter

--- a/manual-tests/ME-operator-guide/index.adoc
+++ b/manual-tests/ME-operator-guide/index.adoc
@@ -6,7 +6,7 @@ ifndef::imagesdir[]
 :imagesdir: assets
 endif::[]
 
-= Manuel d'Exploitation2 {scmref}
+= {scmref} - Manuel d'Exploitation3 {scmref}
 
 [abstract]
 --
