tests: Add custum confluence raw code

--- a/manual-tests/document-01/index.adoc
+++ b/manual-tests/document-01/index.adoc
@@ -37,6 +37,16 @@ scmurl = {scmurl}
 
 ----
 
+
+Test raw html
+
+++++
+<ac:structured-macro 
+    ac:schema-version="1"
+    ac:name="scroll-version-navigation"      
+    data-layout="default" />
+++++
+
 === Titre A1
 
 Contenu A1
